# holly

./: .gitattributes  flake.nix  package.json  pyproject.toml  readme.md
src/holly_server/: __init__.py
src/holly_simulator/: __init__.py
tests/: test_assets.py  test_gbm.py
web/: biome.json  components.json  package.json  readme.md
web/src/: App.tsx  main.tsx
web/src/components/app/: navigation.tsx
web/src/components/common/: websocket.tsx
web/src/routes/: live.tsx  root.tsx
web/src/routes/live/: index.tsx  live-state.ts  websocket.tsx
web/src/routes/training/: index.tsx  training-state.ts
