[project]
name = "holly"
version = "0.1.0"
description = "Add your description here"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
]

[project.scripts]
holly = "holly:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6.7",
]
