[project]
name = "holly"
version = "0.1.0"
description = "Add your description here"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "tensorflow>=2.19.0",
    "websockets>=15.0.1",
]

[project.scripts]
holly = "holly:hello"
server = "holly_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
